--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "components",
     "ui"
   ],
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": false,
-  "main": "src/index.tsx",
+  "main": "dist/index.js",
+  "types": "dist/@types/index.d.ts",
   "files": [
-    "src",
+    "dist",
     "README.md"
   ],
   "repository": {
@@ -41,7 +42,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "tsc",
+    "watch": "tsc -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
