--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
 
-    "module": "esnext",
+    "module": "commonjs",
     "sourceMap": true,
 
     "strict": true,
