--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "components",
     "ui"
   ],
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/@types/index.d.ts",
@@ -43,7 +43,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "yarn build"
   },
   "eslintConfig": {
     "extends": [
