--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
 
     "module": "commonjs",
-    "sourceMap": true,
+    "sourceMap": false,
 
     "strict": true,
     "allowJs": true,
